# trmnl_satgus

./: .gitignore  README.md  pre-commit-config.yaml  pre-commit.sh  pyproject.toml
.devcontainer/: devcontainer.json  devenv.dockerfile  docker-compose.yml  postCreate.sh
.github/workflows/: fetch-position.yml  fetch-tle.yml
tests/: test_satellite.py
trmnl_data/: satgus_position.json  satgus_tle.json
trmnl_plugin/: markup.emulation.html  markup.html  markup.trmnl.html
trmnl_plugin/src/: full.liquid  full.liquid.backup  half_horizontal.liquid  half_vertical.liquid  quadrant.liquid  settings.yml
trmnl_satgus/: __init__.py  calculate_position.py  fetch_tle.py  location_utils.py  pyproject.toml
trmnl_satgus/satgus/: calculate_position.py  fetch_tle.py  location_utils.py
